--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -3,7 +3,20 @@
 @import 'custom/mixin.scss';
 
 
-
+// 错误提示
+.error_tip {
+  @include position-basic(fixed, bottom, 40px, left, 50%);
+  width: 180px;
+  color: #fff;
+  background: rgba(0, 0, 0, .7);
+  opacity: .7;
+  border-radius: 4px;
+  padding: 5px 7px;
+  text-align: center;
+  margin-left: -90px;
+  font-size: .9em;
+  z-index: 10;
+}
 
 
 // 颜色
