我的交易页面json数据显示完成

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,6 +2,13 @@
 @import 'custom/custom.scss';
 @import 'custom/mixin.scss';
 
+// 列表
+.list {
+  display: block;
+}
+.list-space .item {
+  margin-bottom: 10px;
+}
 
 // 错误提示
 .error_tip {
