--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -1,16 +1,15 @@
 
 
-@import "../custom/mixin";
+@import "custom/mixin";
 
 // ==================================
-// ============= 个人主页 ============
+// ============= 我的交易 ============
 // ==================================
-.list {
-	display: block;
+.trade-item {
+  padding: 10px;
+  color: #000;
 }
-
 
 // ==================================
 // ============= 修改密码 ============
 // ==================================
-.
