--- a/www/view/home.html
+++ b/www/view/home.html
@@ -9,9 +9,9 @@
                 <a class="button button-balanced " href="#/edit-user">编辑资料</a>
             </ion-item>
         </ion-list>
-        <ion-list class="list list-inset">
+        <ion-list class="list list-inset list-space">
             <a class="item item-icon-left" href="#/change-password"><i class="icon-locked icon balanced"></i>修改密码</a>
-            <a class="item item-icon-left" href="#/trade"><i class="icon-coin icon balanced"></i>我的交易</a>
+            <a class="item item-icon-left" href="#/trade/all"><i class="icon-coin icon balanced"></i>我的交易</a>
             <a class="item item-icon-left" href="#/terms"><i class="icon-coin icon balanced"></i>服务条款</a>
             <a class="item item-icon-left" href="#/retrieve-pwd"><i class="icon-coin icon balanced"></i>找回密码</a>
             <a class="item item-icon-left" href="#/feedback/question"><i class="icon-coin icon balanced"></i>反馈</a>
