我的交易页面tabs选项卡完成

--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -6,8 +6,12 @@
 // ============= 我的交易 ============
 // ==================================
 .trade-item {
-  padding: 10px;
-  color: #000;
+  padding: 15px;
+}
+.trade-item .division {
+  margin-top: 10px;
+  padding-top: 10px;
+  border-top: 1px solid #ddd;
 }
 
 // ==================================
