--- a/www/view/trade/trade.html
+++ b/www/view/trade/trade.html
@@ -1,6 +1,6 @@
 
-<ion-view title="我的交易">
-	<ion-tabs class="tabs-striped tabs-top">
+<ion-view view-title="我的交易">
+	<ion-tabs class="tabs-striped tabs-top tabs-black">
 	    <ion-tab title="全部" href="#/trade/all">
 	        <ion-nav-view name="trade-all"></ion-nav-view>
 	    </ion-tab>
