--- a/www/view/trade/trade-all.html
+++ b/www/view/trade/trade-all.html
@@ -1,5 +1,5 @@
 
-<ion-view>
+<ion-view view-title="我的交易">
 	<ion-content>
 		<ion-refresher
 	          pulling-text="下拉刷新..."  
@@ -7,15 +7,22 @@
 	    </ion-refresher>
 		<ion-list class="list list-inset list-space">
 			<ion-item class="item trade-item" ng-repeat="item in list">
-				<span>{{item.stuff}}</span><span class="true: green">{{item.status}}</span>
-				<p class="gray_light f12"><span>{{item.payment}}支付<b class="orange">{{item.money}}</b>元</span><time>{{item.time}}</time></p>
-				<p class="gray_mid">订单号：{{item.order_number}}</p>
-				<p>说明： {{item.content}}</p>
+				<div ng-click="toggle($index)" class="pointer">
+					<span class="black">{{item.stuff}}</span>
+					<span class="fr" ng-class="{true: 'green', false: 'orange'}[item.status]">{{item.status ? '成功': '未成功'}}</span>
+					<p><span>{{item.payment}}支付<b class="orange">{{item.money}}</b>元</span>
+					<time class="fr">{{item.time}}</time>
+					</p>
+				</div>
+				<div ng-show="show">
+					<p class="division">订单号：{{item.order_number}}</p>
+					<p>说明： {{item.content}}</p>
+				</div>
 			</ion-item>
 		</ion-list>
-		<ion-infinite-scroll
-	          on-infinite="loadMore()"
-	          distance="1%">
+		<ion-infinite-scroll 
+				on-infinite="loadMore()" 
+				distance="1%">
 	    </ion-infinite-scroll>
     </ion-content>
 </ion-view>
