--- a/www/js/views/tradeTemp.html
+++ b/www/js/views/tradeTemp.html
@@ -5,17 +5,18 @@
 	</ion-refresher>
 	<ion-list class="list list-inset list-space">
 		<ion-item class="item trade-item" ng-repeat="item in list">
-			<div ng-click="toggle($index)" class="pointer">
+			<div ng-click="toggle()" class="pointer">
 				<span class="black">{{item.stuff}}</span>
 				<span class="fr" ng-class="{true: 'green', false: 'orange'}[item.status]">{{item.status ? '成功': '未成功'}}</span>
 				<p><span>{{item.payment}}支付<b class="orange">{{item.money}}</b>元</span>
 				<time class="fr">{{item.time}}</time>
 				</p>
 			</div>
-			<div ng-show="$index===clickRow">
+			<div ng-if="show" ng-class="{true: '', false: 'none' }[show]">
 				<p class="division">订单号：{{item.order_number}}</p>
 				<p>说明： {{item.content}}</p>
 			</div>
+			<input type="hidden" value="{{item.id}}" />
 		</ion-item>
 	</ion-list>
 	<ion-infinite-scroll 
