--- a/www/view/change-password.html
+++ b/www/view/change-password.html
@@ -5,7 +5,7 @@
         <ion-list class="j-form">
             <ion-item class="item-input">
                 <span class="input-label">旧密码</span>
-                <input type="password" name="oldPwd" ng-model="user.oldPwd" placeholder="请输入旧密码" value="" data-empty="请输入旧密码"  />
+                <input type="password" name="password" ng-model="user.password" placeholder="请输入旧密码" value="" data-empty="请输入旧密码"  />
             </ion-item>
             <ion-item class="item-input">
                 <span class="input-label">新密码</span>
@@ -13,7 +13,7 @@
             </ion-item>
             <ion-item class="item-input">
                 <span class="input-label">确认新密码</span>
-                <input type="password" name="confirmPwd" ng-model="user.newPwd" placeholder="请再次输入新密码" value="" data-empty="请再次输入新密码" />
+                <input type="password" name="confirmPwd" placeholder="请再次输入新密码" value="" data-empty="请再次输入新密码" />
             </ion-item>
         </ion-list>
         <p class="tc mt10"><button class="button button-balanced" ng-click="submit()" >提交保存</button></p>
