--- a/www/view/edit-user.html
+++ b/www/view/edit-user.html
@@ -9,20 +9,20 @@
             </ion-item>
             <ion-item class="item-input">
                 <span class="input-label">昵称</span>
-                <input type="text" name="name" placeholder="请输入昵称" value="{{user.name}}" data-empty="请输入昵称" />
+                <input type="text" name="name" placeholder="请输入昵称" ng-model="user.name" value="{{user.name}}" data-empty="请输入昵称" />
             </ion-item>
             <ion-item class="item-input item-select">
                 <span class="input-label">性别</span>
-                <input type="text" name="sex" value="{{user.sex}}" readonly />
+                <input type="text" name="sex" ng-model="user.sex" value="{{user.sex}}" readonly />
                 <!-- <ionic-user-sex></ionic-user-sex> -->
             </ion-item>
             <ion-item class="item-input item-select">
                 <span class="input-label">生日</span>
-                <input type="text" name="birthday" placeholder="未设置" value="{{user.birthday}}" readonly />
+                <input type="text" name="birthday" placeholder="未设置" ng-model="user.birthday" value="{{user.birthday}}" readonly />
             </ion-item>
             <ion-item class="item-input item-select">
                 <span class="input-label">地区</span>
-                <input type="text" name="location" placeholder="未设置" value="{{user.location}}" readonly />
+                <input type="text" name="location" placeholder="未设置" ng-model="user.location" value="{{user.location}}" readonly />
             </ion-item>
         </ion-list>
         <p class="tc mt10"><button class="button button-balanced" ng-click="submit()">提交保存</button></p>
