--- a/www/view/home.html
+++ b/www/view/home.html
@@ -16,7 +16,7 @@
             <a class="item item-icon-left" href="#/retrieve-pwd"><i class="icon-coin icon balanced"></i>找回密码</a>
             <a class="item item-icon-left" href="#/feedback/question"><i class="icon-coin icon balanced"></i>反馈</a>
             <a class="item item-icon-left" href="#/feedback/record"><i class="icon-coin icon balanced"></i>我的反馈记录</a>
-            <ion-toggle toggle-class="toggle-balanced" class="item-icon-left" ng-model="autoLogin" ng-click="statusToggle()">
+            <ion-toggle toggle-class="toggle-balanced" class="item-icon-left" ng-model="user.autoLogin" ng-checked="{{user.autoLogin}}" ng-click="statusToggle()">
                 <i class="icon-key icon balanced"></i>自动登录游戏
             </ion-toggle>          
         </ion-list>
