--- a/www/view/trade/trade-success.html
+++ b/www/view/trade/trade-success.html
@@ -1,26 +1,6 @@
 
 <ion-view view-title="我的交易">
 	<ion-content>
-		<ion-refresher
-	          pulling-text="下拉刷新..."  
-	          on-refresh="doRefresh()">
-	    </ion-refresher>
-		<ion-list class="list list-inset list-space">
-			<ion-item class="item trade-item" ng-repeat="item in list">
-				<div ng-click="toggle($index)" class="pointer">
-					<span class="black">{{item.stuff}}</span>
-					<span class="fr" ng-class="{true: 'green', false: 'orange'}[item.status]">{{item.status ? '成功': '未成功'}}</span>
-					<p><span>{{item.payment}}支付<b class="orange">{{item.money}}</b>元</span>
-					<time class="fr">{{item.time}}</time>
-					</p>
-				</div>
-				<div ng-show="$index===clickRow">
-					<p class="division">订单号：{{item.order_number}}</p>
-					<p>说明： {{item.content}}</p>
-				</div>
-			</ion-item>
-		</ion-list>
-		<ion-infinite-scroll on-infinite="loadMore()" distance="1%">
-	    </ion-infinite-scroll>
+		<trade-list page="succe" list="list"></trade-list>
     </ion-content>
 </ion-view>
