解决我的交易页面无限滚动问题和过滤问题

--- a/www/view/feedback/ques-common.html
+++ b/www/view/feedback/ques-common.html
@@ -7,7 +7,7 @@
 		</ion-refresher>
 		<ion-list class="list-inset list-space">
 			<ion-item ng-repeat="item in list">
-				<div ng-click="toggle()" class="pointer">
+				<!-- <div ng-click="toggle()" class="pointer">
 					<span class="black">{{item.stuff}}</span>
 					<span class="fr" ng-class="{true: 'green', false: 'orange'}[item.status]">{{item.status ? '成功': '未成功'}}</span>
 					<p><span>{{item.payment}}支付<b class="orange">{{item.money}}</b>元</span>
@@ -17,7 +17,7 @@
 				<div ng-if="show" ng-class="{true: '', false: 'none' }[show]">
 					<p class="division">订单号：{{item.order_number}}</p>
 					<p>说明： {{item.content}}</p>
-				</div>
+				</div> -->
 			</ion-item>
 		</ion-list>
 		<ion-infinite-scroll 
