--- a/www/js/views/tradeTemp.html
+++ b/www/js/views/tradeTemp.html
@@ -4,7 +4,7 @@
 	      on-refresh="doRefresh()">
 	</ion-refresher>
 	<ion-list class="list list-inset list-space">
-		<ion-item class="item trade-item" ng-repeat="item in list">
+		<ion-item class="item trade-item" ng-repeat="item in list | filter: tradeFilter">
 			<div ng-click="toggle()" class="pointer">
 				<span class="black">{{item.stuff}}</span>
 				<span class="fr" ng-class="{true: 'green', false: 'orange'}[item.status]">{{item.status ? '成功': '未成功'}}</span>
@@ -16,7 +16,7 @@
 				<p class="division">订单号：{{item.order_number}}</p>
 				<p>说明： {{item.content}}</p>
 			</div>
-			<input type="hidden" value="{{item.id}}" />
+			<input type="hidden" ng-model="item.id" value="{{item.id}}" />
 		</ion-item>
 	</ion-list>
 	<ion-infinite-scroll 
