--- a/www/view/feedback/ques-common.html
+++ b/www/view/feedback/ques-common.html
@@ -1,11 +1,10 @@
 
 <ion-view view-title="常见问题">
 	<ion-content>
-		<!-- <ion-refresher
+		<ion-refresher
 		      pulling-text="下拉刷新..."  
 		      on-refresh="doRefresh()">
-		</ion-refresher> -->
-		<refresh url="../../json/commonquestion.json"></refresh>
+		</ion-refresher>
 		<ion-list class="list list-inset list-space">
 			<ion-item ng-repeat="item in list" class="ques-common">
 				<div ng-click="toggle()" class="pointer">
