--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -45,7 +45,7 @@
 }
 
 // ==================================
-// ============= 我的反馈记录 ==========
+// ======= 我的反馈/我的反馈记录 ========
 // ==================================
 .record-item {
 	margin-bottom: 5px;
@@ -53,6 +53,75 @@
 }
 .record-item .inline-right {
 	text-align: right;
+}
+
+.record-detail {
+	.item {
+		border: 0;
+		background-color: transparent;
+	}
+	.content {
+		border: 1px solid #ccc;
+		border-radius: 3px;
+		padding: 7px 10px;
+		background-color: #fff;
+		white-space: normal;
+		flex: 250px 2 0;
+	}
+	.img {
+		border: 1px solid #ccc;
+		border-radius: 5px;
+		@include size(55px);
+		overflow: hidden;
+		flex: 55px 0 0;
+	}
+	.placeholder {
+		flex: 50px 5 2;
+	}
+
+}
+.record-detail .user{
+	width: 100%;
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	.content {
+		order: 2;
+		margin-right: 10px;
+	} 
+	.img {
+		order: 3;
+	}
+	.placeholder {
+		order: 1;
+	}
+}
+.record-detail .manager{
+	width: 100%;
+	display: flex;
+	flex-flow: row nowrap;
+	align-items: center;
+	.content {
+		order: 2;
+		margin-left: 10px;
+	} 
+	.img {
+		order: 1;
+	}
+	.placeholder {
+		order: 3;
+	}
+}
+.record-footer .item-input-wrapper {
+	background-color: #fff;
+	line-height: 33px;
+	border: 1px solid #ccc;
+	height: 33px;
+}
+.record-footer .button {
+	background-color: #33cd5f;
+	color: #fff;
+	border-color: #28a54c;
 }
 
 // ==================================
