--- a/www/view/home.html
+++ b/www/view/home.html
@@ -15,7 +15,7 @@
             <a class="item item-icon-left" href="#/terms"><i class="ion-folder icon balanced"></i>服务条款</a>
             <a class="item item-icon-left" href="#/retrieve-pwd"><i class="ion-unlocked icon balanced"></i>找回密码</a>
             <a class="item item-icon-left" href="#/feedback/common"><i class="ion-gear-b icon balanced"></i>反馈</a>
-            <a class="item item-icon-left" href="#/feedback/record"><i class="ion-clipboard icon balanced"></i>我的反馈记录</a>
+            <a class="item item-icon-left" href="#/record-detail"><i class="ion-clipboard icon balanced"></i>我的反馈记录</a>
             <ion-toggle toggle-class="toggle-balanced" class="item-icon-left" ng-model="user.autoLogin" ng-checked="{{user.autoLogin}}" ng-click="statusToggle()">
                 <i class="ion-key icon balanced"></i>自动登录游戏
             </ion-toggle>          
