--- a/www/view/home.html
+++ b/www/view/home.html
@@ -13,7 +13,7 @@
             <a class="item item-icon-left" href="#/change-password"><i class="ion-locked icon balanced"></i>修改密码</a>
             <a class="item item-icon-left" href="#/trade/all"><i class="ion-star icon balanced"></i>我的交易</a>
             <a class="item item-icon-left" href="#/terms"><i class="ion-folder icon balanced"></i>服务条款</a>
-            <a class="item item-icon-left" href="#/retrieve-pwd"><i class="ion-unlocked icon balanced"></i>找回密码</a>
+            <a class="item item-icon-left" href="#/identity"><i class="ion-unlocked icon balanced"></i>找回密码</a>
             <a class="item item-icon-left" href="#/feedback/common"><i class="ion-gear-b icon balanced"></i>反馈</a>
             <a class="item item-icon-left" href="#/record-detail"><i class="ion-clipboard icon balanced"></i>我的反馈记录</a>
             <ion-toggle toggle-class="toggle-balanced" class="item-icon-left" ng-model="user.autoLogin" ng-checked="{{user.autoLogin}}" ng-click="statusToggle()">
