--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -21,9 +21,10 @@
 
 
 // 设置textarea
-.item-input textarea {
-  width: calc(100% - 155px);
-}
+// .item-input textarea {
+//   width: calc(100% - 155px);
+// }
+
 // 设置全局背景色
 .scroll-content {
   background-color: #efefef;
