编辑资料用户性别选择器初步完成

--- a/www/views/edit-user.html
+++ b/www/views/edit-user.html
@@ -11,16 +11,15 @@
                 <span class="input-label">昵称</span>
                 <input type="text" name="name" placeholder="请输入昵称" ng-model="user.name" value="{{user.name}}" data-empty="请输入昵称" />
             </ion-item>
-            <ion-item class="item-input item-select">
+            <ion-item class="item-input">
                 <span class="input-label">性别</span>
-                <input type="text" name="sex" ng-model="user.sex" value="{{user.sex}}" readonly />
-                <!-- <ionic-user-sex></ionic-user-sex> -->
+                <ionic-user-sex></ionic-user-sex>
             </ion-item>
-            <ion-item class="item-input item-select">
+            <ion-item class="item-input">
                 <span class="input-label">生日</span>
                 <input type="text" name="birthday" placeholder="未设置" ng-model="user.birthday" value="{{user.birthday}}" readonly />
             </ion-item>
-            <ion-item class="item-input item-select">
+            <ion-item class="item-input">
                 <span class="input-label">地区</span>
                 <input type="text" name="location" placeholder="未设置" ng-model="user.location" value="{{user.location}}" readonly />
             </ion-item>
