--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -23,6 +23,50 @@
 	overflow: hidden;
 }
 
+// 用户性别选择器
+.sex-picker-bg {
+	background-color: #fff;
+	.modal {
+		min-height: auto;
+		bottom: 0;
+		height: 240px;
+		top: auto;
+		left: 0;
+		width: 100%;
+	}
+}
+.sex-picker {
+	@include position(absolute, down);
+	height: 240px;
+	width: 100%;
+}
+.sex-picker-content {
+	text-align: center;
+	background-color: #cfd5da;
+	height: 200px;
+	li {
+		line-height: 40px;
+		height: 40px;
+	}
+}
+.sex-picker-scroll {
+	top: 80px;
+	color: #000;
+	height: 40px;
+	overflow: visible;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #fff;
+}
+.picker-center-highlight {
+	background-color: rgba(255,255,255,.4);
+	width: 100%;
+	height: 36px;
+	position: absolute;
+	bottom: 100px;
+	margin-bottom: -18px;
+	z-index: -1;
+}
+
 // ==================================
 // ============= 服务条款 ============
 // ==================================
