--- a/src/js/templates/userSexTemp.html
+++ b/src/js/templates/userSexTemp.html
@@ -1,15 +1,19 @@
 
-<ion-modal-view>
-	<ion-header-bar ng-class="barCssClass">
-		<button ng-click="returnCancel()">{{cancelText}}</button>
-		<h1 class="title"></h1>
-		<button ng-click="returnOk()">{{okText}}</button>
-	</ion-header-bar>
-	<ion-content>
-		<ion-scroll on-scroll="getData()" scrollbar-y=false>
-			<ul>
-				<li ng-repeat="sex in datas">{{sex.value}}</li>
-			</ul>
-		</ion-scroll>
-	</ion-content>
-</ion-modal-view>
+<div  class="sex-picker-bg">
+	<ion-modal-view>
+		<div class="sex-picker">
+			<ion-header-bar ng-class="barCssClass">
+				<h1 class="title"></h1>
+				<button class="button" ng-click="returnOk()">{{okText}}</button>
+			</ion-header-bar>
+			<div class="sex-picker-content"  ng-click="test()">
+				<ion-scroll on-scroll="getData()" delegate-handle="mainScroll" scrollbar-y=true  class="sex-picker-scroll">
+					<ul>
+						<li ng-repeat="sex in datas">{{sex.value}}</li>
+					</ul>
+				</ion-scroll>
+			</div>
+			<div class="picker-highlight"></div>
+		</div>
+	</ion-modal-view>
+</div>
