--- a/www/views/edit-user.html
+++ b/www/views/edit-user.html
@@ -13,7 +13,7 @@
             </ion-item>
             <ion-item class="item-input">
                 <span class="input-label">性别</span>
-                <ionic-user-sex></ionic-user-sex>
+                <ionic-user-sex oktext="确定"></ionic-user-sex>
             </ion-item>
             <ion-item class="item-input">
                 <span class="input-label">生日</span>
