编辑页面选择器功能完成

--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -1,6 +1,7 @@
 
 
 @import "custom/mixin";
+@import "pages/ios-picker";
 
 // ==================================
 // ============= 我的交易 ============
