--- a/src/scss/pages/_ios-picker.scss
+++ b/src/scss/pages/_ios-picker.scss
@@ -41,7 +41,7 @@
     content: '';
     height: 110px;
     width: 100%;
-    background-color: rgba(255,255,255,.5);
+    @include gradient(linear, no, to bottom, rgba(255,255,255,.4) 0px, rgba(255,255,255,.4) 45px, rgba(255,255,255,.8) 45px, rgba(255,255,255,.8) 110px);
     z-index: 3;
   }
   &:after {
@@ -49,7 +49,7 @@
     content: '';
     height: 110px;
     width: 100%;
-    background-color: rgba(255,255,255,.5);
+    @include gradient(linear, no, to top, rgba(255,255,255,.4) 0px, rgba(255,255,255,.4) 45px, rgba(255,255,255,.8) 45px, rgba(255,255,255,.8) 110px);
     z-index: 3;
   }
 }
