解决相对路径资源问题

--- a/platforms/android/assets/www/views/edit-user.html
+++ b/platforms/android/assets/www/views/edit-user.html
@@ -3,7 +3,7 @@
    <ion-content>
         <ion-list class="j-form">
             <ion-item class="tc">
-                <img id="user_portrait" class="portrait icon120" ng-src="{{user.portrait}}" ng-click="takePhoto()" />
+                <img id="portrait" class="portrait icon90" ng-src="{{user.portrait}}" ng-click="takePhoto()" />
                 <input type="hidden" name="photo" value="{{user.portrait}}" data-empty="请上传头像"  />
                 <p>点击设置头像</p>
             </ion-item>
