--- a/platforms/android/assets/www/views/home.html
+++ b/platforms/android/assets/www/views/home.html
@@ -18,7 +18,8 @@
             <a class="item item-icon-left" href="#/record-detail"><i class="ion-clipboard icon balanced"></i>我的反馈记录</a>
             <ion-toggle toggle-class="toggle-balanced" class="item-icon-left" ng-model="user.autoLogin" ng-checked="{{user.autoLogin}}" ng-click="statusToggle()">
                 <i class="ion-key icon balanced"></i><em class="black">自动登录游戏</em>
-            </ion-toggle>          
+            </ion-toggle>
+            <a class="item item-icon-left" href="http://www.baidu.com"><i class="ion-clipboard icon balanced"></i>百度一下</a>          
         </ion-list>
         <p class="gray_light tc mt10">关闭自动登录，每次进入游戏时可重新选择登录账号</p>
     </ion-content>
