将头像portrait修改为avatar

--- a/platforms/android/assets/www/views/edit-user.html
+++ b/platforms/android/assets/www/views/edit-user.html
@@ -3,8 +3,8 @@
    <ion-content>
         <ion-list class="j-form">
             <ion-item class="tc">
-                <img id="portrait" class="portrait icon90" ng-src="{{user.portrait}}" ng-click="takePhoto()" />
-                <input type="hidden" class="j-input" name="portrait" value="{{user.portrait}}" data-empty="请上传头像"  />
+                <img class="avatar icon90" ng-src="{{user.avatar}}" ng-click="takePhoto()" />
+                <input type="hidden" class="j-input" name="avatar" value="{{user.avatar}}" data-empty="请上传头像"  />
                 <p>点击设置头像</p>
             </ion-item>
             <ion-item class="item-input">
