--- a/src/scss/pages.scss
+++ b/src/scss/pages.scss
@@ -18,7 +18,7 @@
 // ==================================
 // ============= 编辑资料 ============
 // ==================================
-.portrait {
+.avatar {
 	border: 1px solid #ccc;
 	border-radius: 10px;
 	overflow: hidden;
