--- a/www/views/home.html
+++ b/www/views/home.html
@@ -3,7 +3,7 @@
 	<ion-content>
         <ion-list class="list">
             <ion-item class="item item-thumbnail-left item-button-right">
-                <img class="portrait" ng-src="{{user.portrait}}">
+                <img class="avatar" ng-src="{{user.avatar}}">
                 <h2>{{user.name}}</h2>
                 <p class="gray_light font_sm">ID: {{user.id}}</p>
                 <a class="button balanced ion-compose icon button-icon" href="#/edit-user"></a>
